crawler  read.md

--- a/crawler/package.json
+++ b/crawler/package.json
@@ -12,6 +12,7 @@
   "author": "jill",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "g": "^2.0.1",
     "mysql2": "^2.3.3"
   }
